@@ -174,6 +174,13 @@ public abstract class Terms {
    *  into account. */
   public abstract long getSumDocFreq() throws IOException;
 
+  /** Returns the number of documents that have at least one
+   *  term for this field, or -1 if this measure isn't
+   *  stored by the codec.  Note that, just like other term
+   *  measures, this measure does not take deleted documents
+   *  into account. */
+  public abstract int getDocCount() throws IOException;
+  
   /**
    * Returns a thread-private {@link TermsEnum} instance. Obtaining
    * {@link TermsEnum} from this method might be more efficient than using
